<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Logger" Id="{047a20cc-a785-4614-8465-ede098785b35}">
    <Declaration><![CDATA[{attribute 'qualified only'}
//Global variables for logging to syslog
VAR_GLOBAL CONSTANT
	(*
	Using the IP address directly avoids DNS configuration issues.
	While we may want to address this in the future, for now the static IP
	will suffice:

	$ nslookup ctl-logsrv01
	Name:   ctl-logsrv01.pcdsn
	Address: 172.21.32.36
	*)
	{attribute 'pytmc' := '
		pv: @(PREFIX)LCLSGeneral:LogHost
		io: io
		field: DESC The log host IP address
	'}
	cLogHost		:	STRING(15)	:= '172.21.32.36';
	
	{attribute 'pytmc' := '
		pv: @(PREFIX)LCLSGeneral:LogPort
		io: io
		field: DESC The log host UDP port
	'}
	iLogPort		:	UINT		:= 54321;
    
    sIpTidbit : STRING(6) := '172.21';
END_VAR

VAR_GLOBAL
	sPlcHostname	:	STRING		:= 'unknown';
	
	(* Ref: https://infosys.beckhoff.com/english.php?content=../content/1033/tcpipserver/html/TcPlcLibTcpIp_FB_SocketUdpSendTo.htm
		TODO: Activate the "Replace constants" option in the
		TwinCAT PLC Control->"Project->Options...->Build" dialog window. 
	*)
	TCPADS_MAXUDP_BUFFSIZE : UDINT :=10000;
    
	{analysis -33}
	fbRootLogger : FB_LogMessage; //Instantiated here to be used everywhere
	{analysis +33}
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>